--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@clerk/clerk-expo": "^2.13.1",
+    "@clerk/express": "^1.7.0",
     "cors": "^2.8.5",
     "cron": "^4.3.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "inngest": "^3.39.1",
     "mongoose": "^8.14.3"
   },
   "devDependencies": {
